# docker-syncthing

./: .bumpversion.cfg  .editorconfig  .hadolint.yaml  .tool-versions  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.amd64  Dockerfile.arm32v6  Dockerfile.j2  LICENSE  Makefile  Pipfile  README.md  Taskfile.yml  cliff.toml  config.xml  docker-bake.hcl  docker-syncthing@.service  installer.sh  pyproject.toml  syncthing-config.xml
.github/workflows/: cd.yaml  ci.yaml  pr.yaml  release-amd64.yaml  release-arm32v6.yaml  release.yaml
rootfs/: docker-entrypoint.sh
rootfs/etc/syncthing/: config.xml
scripts/: bump-syncthing.sh  bump.sh  image-build  image-push  image-tag  image_tag  install-qemu  tag.sh
systemd/: docker-syncthing.service  docker-syncthing@.default  docker-syncthing@.service
