[project]
name = "docker-syncthing"
version = "2.0.11"
description = "Syncthing as a container using Docker"
authors = [
    { name = "BESANCON Vincent", email = "besancon.vincent@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "commitizen>=3.20.0",
]

#==== COMMITIZEN ====

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.11"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
